tests/snapshots/assets__check_file@unit-math-fn-comma.typ-0.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/math/fn-comma.typ
---
$
  sin(x)
$
$
  sin(x,)
$
$
  sin(x,,,)
$
$
  mat(1,;,1)
$
$
  mat(1,;,;,1;1)
$
