tests/snapshots/assets__check_file@unit-math-frac.typ-0.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/math/frac.typ
snapshot_kind: text
---
$
  (x+1) / 2
$
$
  ((x+1)) / 2
$
$
  (x+1) / ((2))
$
$
  (x+1) / ((2))
$
