tests/snapshots/assets__check_file@unit-math-frac.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/math/frac.typ
---
$ (x+1) / 2 $
$ ((x+1)) / 2 $
$ (x+1) / ((2)) $
$
(x+1) / ((2))
$
