tests/snapshots/assets__check_file@unit-math-let.typ-0.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/math/let.typ
snapshot_kind: text
---
#let xmat(
  ..arg,
) = [..#arg]
$
  #let g = (i) => $g^#i$
    xmat(2, 2, #g)
$
