tests/snapshots/assets__check_file@unit-math-long.typ-0.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/math/long.typ
snapshot_kind: text
---
#let aaaaaaaaaaaaaaaaaaaaa = 0
#let bbbbbbbbbbbbbbbbbbbbbb = 0
#let CCCCCCCCCCCCCCCCCCCCCCCCC = 0
$
  aaaaaaaaaaaaaaaaaaaaa + bbbbbbbbbbbbbbbbbbbbbb + CCCCCCCCCCCCCCCCCCCCCCCCC
$
$
  [aaaaaaaaaaaaaaaaaaaaa + bbbbbbbbbbbbbbbbbbbbbb] + CCCCCCCCCCCCCCCCCCCCCCCCC
$
$
  [aaaaaaaaaaaaaaaaaaaaa + bbbbbbbbbbbbbbbbbbbbbb] + CCCCCCCCCCCCCCCCCCCCCCCCC
$
