tests/snapshots/assets__check_file@unit-math-long.typ-40.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/math/long.typ
---
#let aaaaaaaaaaaaaaaaaaaaa = 0
#let bbbbbbbbbbbbbbbbbbbbbb = 0
#let CCCCCCCCCCCCCCCCCCCCCCCCC = 0
$
aaaaaaaaaaaaaaaaaaaaa + bbbbbbbbbbbbbbbbbbbbbb + CCCCCCCCCCCCCCCCCCCCCCCCC
$
$
[
  aaaaaaaaaaaaaaaaaaaaa + bbbbbbbbbbbbbbbbbbbbbb
] + CCCCCCCCCCCCCCCCCCCCCCCCC
$
$
[
  aaaaaaaaaaaaaaaaaaaaa + bbbbbbbbbbbbbbbbbbbbbb
] + CCCCCCCCCCCCCCCCCCCCCCCCC
$
