tests/snapshots/assets__check_file@unit-math-math-call-chain.typ-0.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/math/math-call-chain.typ
snapshot_kind: text
---
$arrow.r.long.bar$
