tests/snapshots/assets__check_file@unit-math-math-call-chain.typ-120.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/math/math-call-chain.typ
---
$arrow.r.long.bar$
